finished implementing all the required features
